Add jwt refresh token logic